<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login" tools:context=".LoginActivity">



    <EditText
        android:id="@+id/login_parameter"
        android:layout_height = "wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:hint="@string/login_nick_hint"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_parameter"
        android:layout_below="@+id/login_parameter"
        android:layout_alignParentStart="true"
        android:hint="@string/login_pass_hint"
        android:layout_marginTop="36dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_group"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/login_button"
        android:layout_marginTop="31dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/act_log_image" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginactivity_logbutton"
        android:id="@+id/login_button"
        android:layout_below="@+id/password_parameter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_account"
        android:id="@+id/no_account"
        android:layout_alignWithParentIfMissing="false"
        android:elegantTextHeight="true"
        android:layout_below="@+id/login_button"
        android:layout_toStartOf="@+id/login_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Зарегистрироваться"
        android:id="@+id/login_newacc"
        android:linksClickable="true"
        android:longClickable="false"
        android:clickable="true"
        android:textColor="#0a5779"
        android:layout_alignTop="@+id/no_account"
        android:layout_alignStart="@+id/login_button"
        />


</RelativeLayout>
