<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_user_info" tools:context="com.stishki.iva.UserInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:content="@string/acc_user_name"
        android:id="@+id/user_name_label"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/user_name"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/user_name_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:content="@string/acc_user_nick"
        android:id="@+id/user_nick_label"
        android:layout_below="@+id/user_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/user_nick"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/user_nick_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:content="@string/acc_user_email"
        android:id="@+id/textView7"
        android:layout_below="@+id/user_nick"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/user_email"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Собрано откликов"
        android:id="@+id/acc_feedback_label"
        android:layout_below="@+id/user_email"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_thumb_up_24dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/like"
        android:layout_marginTop="23dp"
        android:layout_alignTop="@+id/acc_feedback_label"
        android:layout_toStartOf="@+id/liketv" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_thumb_down_24dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/dislike"
        android:layout_alignBottom="@+id/liketv"
        android:layout_toStartOf="@+id/disliketv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/liketv"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/like"
        android:layout_toStartOf="@+id/dislike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/disliketv"
        android:layout_marginRight="-20dp"
        android:layout_alignBottom="@+id/dislike"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Мой аккаунт"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/user_name" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Поменять пароль"
        android:id="@+id/btn_cng_pswrd"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/like"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
